--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.2.5",
@@ -28,6 +29,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "prisma": "^4.15.0"
   }
 }
