--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://fayzullo:fayzullo@cluster0.sno0wj0.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAYTH_SECRET"
+
+GITHUB_ID=
+GITHUB_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
