--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@
 DATABASE_URL="mongodb+srv://fayzullo:fayzullo@cluster0.sno0wj0.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAYTH_SECRET"
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=c260f70980001e4a1b60
+GITHUB_SECRET=b7f6f2360baa042b0b2aada17b04947bdded9044
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=508413043820-35pr56ssf0nhajall0obnjmhig1m3912.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
